--- a/config/sync/core.entity_form_display.node.committee_member.default.yml
+++ b/config/sync/core.entity_form_display.node.committee_member.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.browse_files_modal
+    - field.field.node.committee_member.field_country
     - field.field.node.committee_member.field_country_cm
     - field.field.node.committee_member.field_custom_date_range_text
     - field.field.node.committee_member.field_designation_cm
@@ -13,8 +14,10 @@ dependencies:
     - node.type.committee_member
   module:
     - address
+    - chosen_field
     - datetime
     - entity_browser
+    - field_group
     - field_layout
     - layout_discovery
     - path
@@ -22,6 +25,31 @@ third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
+  field_group:
+    group_old_fields:
+      children:
+        - field_designation_cm
+        - field_country_cm
+        - field_custom_date_range_text
+        - field_parent_node_cm
+        - field_end_of_mandate
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: true
+        label_element: h3
+        label_element_classes: ''
+        required_fields: true
+        attributes: ''
+        effect: none
+        speed: fast
+        description: ''
+      label: 'Old fields'
+      region: content
 id: node.committee_member.default
 targetEntityType: node
 bundle: committee_member
@@ -29,18 +57,24 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_country:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_country_cm:
-    weight: 6
+    weight: 4
     type: address_default
     settings: {  }
     third_party_settings: {  }
     region: content
   field_custom_date_range_text:
-    weight: 8
+    weight: 5
     type: string_textfield
     settings:
       size: 60
@@ -48,7 +82,7 @@ content:
     third_party_settings: {  }
     region: content
   field_designation_cm:
-    weight: 5
+    weight: 3
     type: string_textfield
     settings:
       size: 150
@@ -56,19 +90,19 @@ content:
     third_party_settings: {  }
     region: content
   field_end_of_mandate:
-    weight: 121
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_parent_node_cm:
-    weight: 10
+    weight: 6
     type: options_select
     settings: {  }
     third_party_settings: {  }
     region: content
   field_photo_cm:
-    weight: 9
+    weight: 1
     type: entity_browser_file
     settings:
       entity_browser: browse_files_modal
@@ -83,14 +117,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 8
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -98,39 +132,39 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 12
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 16
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 13
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -138,7 +172,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
