--- a/config/sync/core.entity_view_display.node.section_page.default.yml
+++ b/config/sync/core.entity_view_display.node.section_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.section_page.body
+    - field.field.node.section_page.field_committee_members
     - field.field.node.section_page.field_media_image
     - field.field.node.section_page.field_sections
     - node.type.section_page
@@ -132,6 +133,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: left
+  field_committee_members:
+    weight: 6
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
+    region: content
   field_media_image:
     type: responsive_image
     weight: 4
