--- a/config/sync/field.field.paragraph.member.field_end_of_mandate.yml
+++ b/config/sync/field.field.paragraph.member.field_end_of_mandate.yml
@@ -20,10 +20,7 @@ label: 'End of mandate'
 description: ''
 required: false
 translatable: false
-default_value:
-  -
-    default_date_type: relative
-    default_date: '+1 years'
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: datetime
