--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -46,14 +46,12 @@ third_party_settings:
             attributes: ''
           left:
             wrapper: div
-            classes:
-              col-sm-6: col-sm-6
+            classes: {  }
             add_region_classes: 1
             attributes: ''
           right:
             wrapper: div
-            classes:
-              col-sm-6: col-sm-6
+            classes: {  }
             add_region_classes: 1
             attributes: ''
           bottom:
@@ -66,9 +64,11 @@ third_party_settings:
       top:
         - field_article_type
         - node_title
+      right:
         - node_post_date
-        - group_image
         - body
+      left:
+        - group_image
         - field_media_image
         - field_caption
       bottom:
@@ -91,6 +91,12 @@ third_party_settings:
         weight: 2
         label: hidden
         formatter: ds_post_date_long
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
       node_title:
         plugin_id: node_title
         weight: 1
@@ -157,7 +163,7 @@ content:
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: top
+    region: right
   field_article_type:
     type: entity_reference_label
     weight: 0
@@ -172,11 +178,11 @@ content:
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: top
+    region: left
   field_media_image:
     type: responsive_image
     weight: 4
-    region: top
+    region: left
     label: hidden
     settings:
       responsive_image_style: wide
