--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -26,52 +26,34 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: bs_2col_stacked
-      library: null
+      id: ds_2col_stacked
+      library: ds/ds_2col_stacked
       disable_css: false
       entity_classes: all_classes
       settings:
-        layout:
-          wrapper: div
-          classes:
-            row: row
-          add_layout_class: 1
-          attributes: ''
-        regions:
-          top:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
-          left:
-            wrapper: div
-            classes: {  }
-            add_region_classes: 1
-            attributes: ''
-          right:
-            wrapper: div
-            classes: {  }
-            add_region_classes: 1
-            attributes: ''
-          bottom:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
+        wrappers:
+          header: div
+          left: div
+          right: div
+          footer: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      top:
+      header:
         - field_article_type
         - node_title
-      right:
-        - node_post_date
-        - body
       left:
+        - node_post_date
         - group_image
         - field_media_image
         - field_caption
-      bottom:
+      right:
+        - body
+      footer:
         - group_related
         - 'dynamic_block_field:node-related_news_and_stories'
     fields:
@@ -90,7 +72,7 @@ third_party_settings:
         plugin_id: node_post_date
         weight: 2
         label: hidden
-        formatter: ds_post_date_long
+        formatter: ds_post_date_medium
         ft:
           id: default
           settings:
@@ -167,7 +149,7 @@ content:
   field_article_type:
     type: entity_reference_label
     weight: 0
-    region: top
+    region: header
     label: hidden
     settings:
       link: true
