--- a/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
@@ -33,6 +33,7 @@ dependencies:
     - datetime
     - datetime_range
     - ds
+    - smart_trim
     - taxonomy
     - user
 third_party_settings:
@@ -62,6 +63,7 @@ third_party_settings:
         - node_title
         - field_ipu_event_dates
         - field_location
+        - field_summary
         - field_event_computed_date
     fields:
       node_title:
@@ -69,6 +71,16 @@ third_party_settings:
         weight: 1
         label: hidden
         formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.ipu_event.teaser
 targetEntityType: node
 bundle: ipu_event
@@ -76,7 +88,7 @@ mode: teaser
 content:
   field_event_computed_date:
     type: datetime_plain
-    weight: 4
+    weight: 5
     region: main
     label: above
     settings:
@@ -90,21 +102,55 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_ipu_event_dates:
-    type: daterange_plain
+    type: daterange_default
     weight: 2
     region: main
     label: hidden
     settings:
-      separator: '-'
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: short_date_only
+      separator: '-'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_location:
     type: address_default
     weight: 3
     region: main
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_summary:
+    type: smart_trim
+    weight: 4
+    region: main
+    label: hidden
+    settings:
+      trim_length: 40
+      trim_type: words
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      trim_options:
+        text: true
+        trim_zero: false
+      wrap_output: false
+      more_link: false
+      summary_handler: full
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   field_agenda_order_number: true
   field_country: true
@@ -123,7 +169,6 @@ hidden:
   field_ipu_event_sponsors: true
   field_programme_show_print: true
   field_sponsor: true
-  field_summary: true
   field_twitter_order: true
   langcode: true
   links: true
