--- a/config/sync/views.view.map_data.yml
+++ b/config/sync/views.view.map_data.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.taxonomy_term.field_ipu_member
     - field.storage.taxonomy_term.field_iso_code
     - field.storage.taxonomy_term.field_iso_code_for_parliament
+    - field.storage.taxonomy_term.field_no_parliament_page
     - field.storage.taxonomy_term.field_principles_signatory
     - taxonomy.vocabulary.country
   module:
@@ -602,6 +603,71 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_no_parliament_page:
+          id: field_no_parliament_page
+          table: taxonomy_term__field_no_parliament_page
+          field: field_no_parliament_page
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: true-false
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -702,11 +768,12 @@ display:
         - 'config:field.storage.taxonomy_term.field_ipu_member'
         - 'config:field.storage.taxonomy_term.field_iso_code'
         - 'config:field.storage.taxonomy_term.field_iso_code_for_parliament'
+        - 'config:field.storage.taxonomy_term.field_no_parliament_page'
         - 'config:field.storage.taxonomy_term.field_principles_signatory'
   data_export_countries_json:
     display_plugin: data_export
     id: data_export_countries_json
-    display_title: 'Data export'
+    display_title: 'Data export JSON'
     position: 1
     display_options:
       display_extenders:
@@ -741,6 +808,7 @@ display:
         type: none
         options:
           offset: 0
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -754,11 +822,12 @@ display:
         - 'config:field.storage.taxonomy_term.field_ipu_member'
         - 'config:field.storage.taxonomy_term.field_iso_code'
         - 'config:field.storage.taxonomy_term.field_iso_code_for_parliament'
+        - 'config:field.storage.taxonomy_term.field_no_parliament_page'
         - 'config:field.storage.taxonomy_term.field_principles_signatory'
   data_export_countries_xml:
     display_plugin: data_export
     id: data_export_countries_xml
-    display_title: 'Data export'
+    display_title: 'Data export XML'
     position: 1
     display_options:
       display_extenders:
@@ -793,6 +862,7 @@ display:
         type: none
         options:
           offset: 0
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -806,4 +876,5 @@ display:
         - 'config:field.storage.taxonomy_term.field_ipu_member'
         - 'config:field.storage.taxonomy_term.field_iso_code'
         - 'config:field.storage.taxonomy_term.field_iso_code_for_parliament'
+        - 'config:field.storage.taxonomy_term.field_no_parliament_page'
         - 'config:field.storage.taxonomy_term.field_principles_signatory'
