--- a/config/sync/core.entity_form_display.node.ipu_event.default.yml
+++ b/config/sync/core.entity_form_display.node.ipu_event.default.yml
@@ -221,7 +221,7 @@ content:
     third_party_settings: {  }
   field_event_theme:
     weight: 4
-    type: options_select
+    type: chosen_select
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -269,10 +269,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: ipu_event_section
     third_party_settings: {  }
     region: content
   field_ipu_event_session_type:
@@ -281,10 +281,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: ipu_event_session_type
     third_party_settings: {  }
     region: content
   field_ipu_event_sessions:
