--- a/config/sync/field.field.node.ipu_event.field_event_computed_date.yml
+++ b/config/sync/field.field.node.ipu_event.field_event_computed_date.yml
@@ -17,7 +17,7 @@ field_name: field_event_computed_date
 entity_type: node
 bundle: ipu_event
 label: 'Event Computed Date'
-description: ''
+description: 'Automatically updated date used to sort future events listings. '
 required: false
 translatable: false
 default_value: {  }
