Add LinkIt and Advanced D8 link modules, with configuration.

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "drupal/date_popup": "^1.0",
         "drupal/datetime_extras": "^1.0@alpha",
         "drupal/ds": "^3.3",
+        "drupal/editor_advanced_link": "^1.4",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/entityqueue": "^1.0@beta",
@@ -78,6 +79,7 @@
         "drupal/job_scheduler": "^2.0@alpha",
         "drupal/lang_dropdown": "^2.0@beta",
         "drupal/languagefield": "^1.5",
+        "drupal/linkit": "^5.0",
         "drupal/mailchimp": "^1.8",
         "drupal/mailchimp_campaign": "^1.8",
         "drupal/mailchimp_lists": "^1.8",
