--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -51,6 +51,7 @@ module:
   dropzonejs_eb_widget: 0
   dynamic_page_cache: 0
   editor: 0
+  editor_advanced_link: 0
   embed: 0
   entity_browser: 0
   entity_browser_entity_form: 0
@@ -103,6 +104,7 @@ module:
   languagefield: 0
   layout_discovery: 0
   link: 0
+  linkit: 0
   locale: 0
   mailchimp: 0
   mailchimp_campaign: 0
