--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -59,6 +59,9 @@ settings:
             - ShowBlocks
             - Source
   plugins:
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: editor
     language:
       language_list: un
     stylescombo:
