--- a/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.ipu_event.teaser.yml
@@ -33,8 +33,8 @@ dependencies:
     - datetime
     - datetime_range
     - ds
+    - field_group
     - smart_trim
-    - taxonomy
     - user
 third_party_settings:
   ds:
@@ -59,21 +59,23 @@ third_party_settings:
             attributes: ''
     regions:
       main:
+        - group_content
+        - group_date
         - field_event_type
         - node_title
+        - field_event_computed_date
         - field_ipu_event_dates
         - field_location
         - field_summary
-        - field_event_computed_date
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 2
         label: hidden
         formatter: default
         settings:
           link: true
-          wrapper: h2
+          wrapper: h3
           class: ''
         ft:
           id: default
@@ -81,6 +83,47 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
+  field_group:
+    group_date:
+      children:
+        - field_event_computed_date
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-event-date
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Date
+      region: hidden
+    group_content:
+      children:
+        - field_event_type
+        - node_title
+        - field_ipu_event_dates
+        - field_location
+        - field_summary
+      parent_name: ''
+      weight: 0
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-content
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Content
+      region: hidden
 id: node.ipu_event.teaser
 targetEntityType: node
 bundle: ipu_event
@@ -88,22 +131,30 @@ mode: teaser
 content:
   field_event_computed_date:
     type: datetime_plain
-    weight: 5
+    weight: 3
     region: main
-    label: above
+    label: hidden
     settings:
       timezone_override: ''
     third_party_settings: {  }
   field_event_type:
-    type: entity_reference_rss_category
-    weight: 0
+    type: entity_reference_label
+    weight: 1
     region: main
-    label: above
-    settings: {  }
-    third_party_settings: {  }
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_ipu_event_dates:
     type: daterange_default
-    weight: 2
+    weight: 3
     region: main
     label: hidden
     settings:
@@ -119,15 +170,15 @@ content:
             lb-col: false
             classes: {  }
   field_location:
-    type: address_default
-    weight: 3
+    type: address_plain
+    weight: 4
     region: main
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_summary:
     type: smart_trim
-    weight: 4
+    weight: 5
     region: main
     label: hidden
     settings:
