Add new Event session type vocabulary, added as a field to event session paragraph. Smarter processing of event dates output on templates (to show only month/year or only year)

--- a/config/sync/core.entity_form_display.node.ipu_event.default.yml
+++ b/config/sync/core.entity_form_display.node.ipu_event.default.yml
@@ -122,12 +122,12 @@ third_party_settings:
       weight: 24
       format_type: tab
       format_settings:
-        id: ''
-        classes: ''
         description: ''
         formatter: closed
         required_fields: true
-      label: Programmes
+        id: ''
+        classes: ''
+      label: 'Programme sessions'
       region: content
     group_right_menu:
       children:
