--- a/config/sync/field.field.paragraph.related_content.field_node.yml
+++ b/config/sync/field.field.paragraph.related_content.field_node.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.article
     - node.type.basic_page
     - node.type.event
+    - node.type.ipu_event
     - node.type.landing_page
     - node.type.page
     - node.type.publication
@@ -35,6 +36,7 @@ settings:
     target_bundles:
       event: event
       basic_page: basic_page
+      ipu_event: ipu_event
       landing_page: landing_page
       article: article
       page: page
