--- a/config/sync/field.field.node.publication.field_media_image.yml
+++ b/config/sync/field.field.node.publication.field_media_image.yml
@@ -8,16 +8,34 @@ dependencies:
   module:
     - content_translation
     - custom_add_another
+    - filefield_paths
     - image
 third_party_settings:
+  filefield_paths:
+    enabled: true
+    file_path:
+      value: ''
+      options:
+        slashes: false
+        pathauto: false
+        transliterate: false
+    redirect: false
+    retroactive_update: false
+    active_updating: false
+    file_name:
+      value: '[file:ffp-name-only-original].[file:ffp-extension-original]'
+      options:
+        slashes: false
+        pathauto: false
+        transliterate: false
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-  content_translation:
-    translation_sync:
-      alt: alt
-      title: title
-      file: '0'
 id: node.publication.field_media_image
 field_name: field_media_image
 entity_type: node
@@ -35,10 +53,15 @@ settings:
   max_resolution: ''
   min_resolution: ''
   alt_field: false
-  title_field: false
-  default_image: '394'
   alt_field_required: true
+  title_field: false
   title_field_required: false
+  default_image:
+    uuid: ''
+    alt: '3'
+    title: '3'
+    width: 3
+    height: 3
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
