--- a/config/sync/core.entity_form_display.paragraph.member.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.member.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.member.field_end_of_mandate
+    - field.field.paragraph.member.field_member_position
     - field.field.paragraph.member.field_person
-    - field.field.paragraph.member.field_position
     - paragraphs.paragraphs_type.member
   module:
     - chosen_field
@@ -27,19 +27,20 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_member_position:
+    weight: 1
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete_tags
+    region: content
   field_person:
     weight: 0
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
-    region: content
-  field_position:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
 hidden:
   created: true
