--- a/config/sync/field.storage.paragraph.field_member_position.yml
+++ b/config/sync/field.storage.paragraph.field_member_position.yml
@@ -1,17 +1,16 @@
-uuid: 03321ea5-3220-4ac0-a39c-9346ff162f40
+uuid: c86017cd-9310-422c-85f4-7f5bd11cc266
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_position
-field_name: field_position
+    - taxonomy
+id: paragraph.field_member_position
+field_name: field_member_position
 entity_type: paragraph
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
+  target_type: taxonomy_term
 module: core
 locked: false
 cardinality: 1
