--- a/config/sync/language.content_settings.taxonomy_term.member_role.yml
+++ b/config/sync/language.content_settings.taxonomy_term.member_role.yml
@@ -1,9 +1,9 @@
-uuid: 78f37f3a-76c3-49e7-8635-3bc5a6ffb14e
+uuid: a869bbb4-3185-4694-913d-773be9740276
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.event_session_type
+    - taxonomy.vocabulary.member_role
   module:
     - content_translation
 third_party_settings:
@@ -11,8 +11,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: taxonomy_term.event_session_type
+id: taxonomy_term.member_role
 target_entity_type_id: taxonomy_term
-target_bundle: event_session_type
+target_bundle: member_role
 default_langcode: site_default
 language_alterable: false
