--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -61,11 +61,23 @@ third_party_settings:
         - body
       right:
         - 'dynamic_block_field:node-menu_block'
+        - 'dynamic_block_field:node-contextual_menu_event_navigation'
         - field_media_image
         - field_caption
       bottom:
         - field_sections
     fields:
+      'dynamic_block_field:node-contextual_menu_event_navigation':
+        plugin_id: 'dynamic_block_field:node-contextual_menu_event_navigation'
+        weight: 4
+        label: above
+        formatter: default
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
       'dynamic_block_field:node-menu_block':
         plugin_id: 'dynamic_block_field:node-menu_block'
         weight: 3
@@ -79,7 +91,7 @@ third_party_settings:
             classes: {  }
       'dynamic_block_field:node-top_level_menu_item':
         plugin_id: 'dynamic_block_field:node-top_level_menu_item'
-        weight: 2
+        weight: 1
         label: hidden
         formatter: default
       node_title:
@@ -106,13 +118,13 @@ mode: default
 content:
   body:
     label: hidden
-    weight: 1
+    weight: 2
     type: text_default
     settings: {  }
     third_party_settings: {  }
     region: left
   field_caption:
-    weight: 5
+    weight: 6
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -120,7 +132,7 @@ content:
     region: right
   field_media_image:
     type: responsive_image
-    weight: 4
+    weight: 5
     region: right
     label: hidden
     settings:
@@ -129,7 +141,7 @@ content:
     third_party_settings: {  }
   field_sections:
     label: hidden
-    weight: 6
+    weight: 7
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
