--- a/config/sync/core.entity_view_display.node.section_page.default.yml
+++ b/config/sync/core.entity_view_display.node.section_page.default.yml
@@ -63,19 +63,26 @@ third_party_settings:
     regions:
       top:
         - node_title
+        - field_committee_members
       left:
         - body
       right:
         - 'dynamic_block_field:node-top_level_menu_item'
         - 'dynamic_block_field:node-menu_block'
+        - 'dynamic_block_field:node-contextual_menu_event_navigation'
         - field_media_image
       bottom:
         - field_sections
         - 'dynamic_block_field:node-section_sub_pages'
     fields:
+      'dynamic_block_field:node-contextual_menu_event_navigation':
+        plugin_id: 'dynamic_block_field:node-contextual_menu_event_navigation'
+        weight: 5
+        label: hidden
+        formatter: default
       'dynamic_block_field:node-menu_block':
         plugin_id: 'dynamic_block_field:node-menu_block'
-        weight: 3
+        weight: 4
         label: hidden
         formatter: default
         ft:
@@ -86,7 +93,7 @@ third_party_settings:
             classes: {  }
       'dynamic_block_field:node-section_sub_pages':
         plugin_id: 'dynamic_block_field:node-section_sub_pages'
-        weight: 6
+        weight: 8
         label: above
         formatter: default
         ft:
@@ -97,7 +104,7 @@ third_party_settings:
             classes: {  }
       'dynamic_block_field:node-top_level_menu_item':
         plugin_id: 'dynamic_block_field:node-top_level_menu_item'
-        weight: 2
+        weight: 3
         label: hidden
         formatter: default
         ft:
@@ -128,23 +135,23 @@ mode: default
 content:
   body:
     label: hidden
-    weight: 1
+    weight: 2
     type: text_default
     settings: {  }
     third_party_settings: {  }
     region: left
   field_committee_members:
-    weight: 6
+    weight: 1
     label: above
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
-    region: content
+    region: top
   field_media_image:
     type: responsive_image
-    weight: 4
+    weight: 6
     region: right
     label: hidden
     settings:
@@ -160,7 +167,7 @@ content:
             classes: {  }
   field_sections:
     label: hidden
-    weight: 5
+    weight: 7
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
